
syntax = "proto3";

package common;

// Simple WorkLoad description
message Workload {
    string instance_id = 1;
    string definition = 2;
}

enum ResourceStatus {
    UNKNOWN = 0;
    PENDING = 1;
    RUNNING = 2;
    FAILED = 3;
    TERMINATED = 4;
}

// Metrics definition for Workers
message WorkerMetric {
    ResourceStatus status = 1;
    string metrics = 2;
}

// Metrics definition for WorkLoad instances
message InstanceMetric {
    ResourceStatus status = 1;
    string metrics = 2;
}

// Definition of metrics send by node
message WorkerStatus {
    oneof status {
        InstanceMetric instance = 1;
        WorkerMetric worker = 2;
    }
}
