syntax = "proto3";

package scheduler;

// Simple WorkLoad description
message WorkLoad {
  string name = 1;
  string tag = 2;
  string image = 3;
}

enum ResourceStatus {
  UNKNOWN = 0;
  PENDING = 1;
  RUNNING = 2;
  FAILED = 3;
  TERMINATING = 4;
}

// Metrics definition for Workers
message WorkerMetric {
  ResourceStatus status = 1;
  string metrics = 2;
}

// Metrics definition for WorkLoad instances
message InstanceMetric {
  ResourceStatus status = 1;
}

// Definition of metrics send by node
message Status {
 oneof status {
       InstanceMetric instance = 1;
       WorkerMetric worker = 2;
 }
}