
syntax = "proto3";

import "messages.proto";
import "google/protobuf/Empty.proto";

package worker;

// The Scheduler service for the Workers
service Worker {
  // Worker registration.
  // A successful registration means the scheduler can start sending
  // a stream of workload instances to be scheduled.
  rpc Register(google.protobuf.Empty) returns (stream common.Workload);

  // Worker metrics udpates (push model)
  rpc SendStatusUpdates(stream common.Status) returns (google.protobuf.Empty);
}
